Update - 4 certinha e com os outputs certo | 5.2. tentativa (mas temos de ver melhor)

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -3775,6 +3775,8 @@
    "source": [
     "##### **Summary Table of Duplicate Nodes**\n",
     "\n",
+    "<center>\n",
+    "\n",
     "| Nodes           | Total    | Duplicates | Percentage |\n",
     "|:---------------:|:--------:|:----------:|:----------:|\n",
     "| **`BEERS`**     | 417,746  | 58,873     | 14.1%      |\n",
@@ -3783,7 +3785,9 @@
     "| **`CITIES`**    | 23,330   | 11,665     | 50.0%      |\n",
     "| **`STYLE`**     | 113      | 0          | 0.0%       |\n",
     "| **`USER`**      | 123,935  | 0          | 0.0%       |\n",
-    "| **`REVIEWS`**   | 2,549,252| 3,111      | 0.1%       |"
+    "| **`REVIEWS`**   | 2,549,252| 3,111      | 0.1%       |\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -4746,9 +4750,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
-    "## **NÃO PERCEBO O PQ, MAS ESTES NODOS NÃO SE CONSEGUEM REMOVER**"
+    "## **PERGUNTAR PROFª**"
    ]
   },
   {
@@ -6038,9 +6042,11 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
-    "# **Não sei se a prof quer a imagem, pq o output só em si é meio meh**\n",
+    "# **PERGUNTAR PROFª | A prof quer a imagem no final? Não dá para tirar as ligações que não existem , mas estão representadas! (??) e é preciso trocar as ligações?**\n",
     "\n",
-    "<img src=\"./TheBeerProject_FinalSchema.png\" width=\"700\">\n",
+    "<img src=\"./img/TheBeerProject_Schema.png\">\n",
+    "\n",
+    "<img src=\"./img/TheBeerProject_FinalSchema.png\" width=\"700\">\n",
     "\n",
     "</div>"
    ]
@@ -6159,7 +6165,7 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
-    "# **Não percebi o que é suposto printar**\n",
+    "# **PERGUNTAR PROFª | Não percebi o que é suposto printar**\n",
     "\n",
     "</div>"
    ]
@@ -6694,30 +6700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Record NumberOfCountries=195>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# How many countries have breweries with beer styles?\n",
-    "query = \"\"\"\n",
-    "    MATCH (c:COUNTRIES)<-[:IN]-(:CITIES)<-[:IN]-(:BREWERIES)-[:BREWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
-    "    RETURN count(DISTINCT c) AS NumberOfCountries\n",
-    "\"\"\"\n",
-    "result = execute_read(driver, query)\n",
-    "pprint(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6733,6 +6716,7 @@
     }
    ],
    "source": [
+    "# Query to search for the top 5 most produced beer styles per country\n",
     "query = \"\"\"\n",
     "    MATCH (c:COUNTRIES)<-[:IN]-(:CITIES)<-[:IN]-(:BREWERIES)-[:BREWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
     "    WITH c, s, count(b) AS beerCount\n",
@@ -6744,6 +6728,96 @@
     "\"\"\"\n",
     "result = execute_read(driver, query)\n",
     "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record country='IR' styleCount=1>,\n",
+      " <Record country='TD' styleCount=1>,\n",
+      " <Record country='NE' styleCount=1>,\n",
+      " <Record country='SN' styleCount=1>,\n",
+      " <Record country='AO' styleCount=1>,\n",
+      " <Record country='BF' styleCount=1>,\n",
+      " <Record country='DM' styleCount=1>,\n",
+      " <Record country='ST' styleCount=1>,\n",
+      " <Record country='BW' styleCount=1>,\n",
+      " <Record country='SB' styleCount=1>,\n",
+      " <Record country='LS' styleCount=1>,\n",
+      " <Record country='MO' styleCount=1>,\n",
+      " <Record country='LY' styleCount=1>,\n",
+      " <Record country='TJ' styleCount=1>,\n",
+      " <Record country='SS' styleCount=1>,\n",
+      " <Record country='YT' styleCount=1>,\n",
+      " <Record country='CF' styleCount=1>,\n",
+      " <Record country='IQ' styleCount=1>,\n",
+      " <Record country='GQ' styleCount=1>,\n",
+      " <Record country='PY' styleCount=1>,\n",
+      " <Record country='BJ' styleCount=1>,\n",
+      " <Record country='GW' styleCount=1>,\n",
+      " <Record country='BD' styleCount=1>,\n",
+      " <Record country='GN' styleCount=1>,\n",
+      " <Record country='GA' styleCount=1>,\n",
+      " <Record country='AE' styleCount=2>,\n",
+      " <Record country='VC' styleCount=2>,\n",
+      " <Record country='RW' styleCount=2>,\n",
+      " <Record country='TM' styleCount=2>,\n",
+      " <Record country='HT' styleCount=2>,\n",
+      " <Record country='VG' styleCount=2>,\n",
+      " <Record country='GP' styleCount=2>,\n",
+      " <Record country='CM' styleCount=2>,\n",
+      " <Record country='SC' styleCount=2>,\n",
+      " <Record country='PK' styleCount=2>,\n",
+      " <Record country='GM' styleCount=2>,\n",
+      " <Record country='FM' styleCount=2>,\n",
+      " <Record country='ZM' styleCount=2>,\n",
+      " <Record country='WS' styleCount=3>,\n",
+      " <Record country='TO' styleCount=3>,\n",
+      " <Record country='CK' styleCount=3>,\n",
+      " <Record country='CI' styleCount=3>,\n",
+      " <Record country='SZ' styleCount=3>,\n",
+      " <Record country='TG' styleCount=3>,\n",
+      " <Record country='MW' styleCount=3>,\n",
+      " <Record country='CG' styleCount=4>,\n",
+      " <Record country='ER' styleCount=4>,\n",
+      " <Record country='SR' styleCount=4>,\n",
+      " <Record country='MZ' styleCount=4>,\n",
+      " <Record country='NC' styleCount=4>,\n",
+      " <Record country='MA' styleCount=4>,\n",
+      " <Record country='GF' styleCount=4>,\n",
+      " <Record country='CV' styleCount=4>,\n",
+      " <Record country='PG' styleCount=4>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Existis countries with less than 5 beer styles produced?\n",
+    "query = \"\"\"\n",
+    "    MATCH (c:COUNTRIES)<-[:IN]-(:CITIES)<-[:IN]-(:BREWERIES)-[:BREWED]->(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
+    "    WITH c, count(DISTINCT s) AS styleCount\n",
+    "    WHERE styleCount < 5\n",
+    "    RETURN c.name AS country, styleCount\n",
+    "    ORDER BY styleCount ASC\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "# **PERGUNTAR PROFª**\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -6788,11 +6862,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  graphName='beerGraphMostSimilar' nodeCount=313 relationshipCount=3107 projectMillis=6550"
+    "#  graphName='beerGraphMostSimilar' nodeCount=313 relationshipCount=813"
    ]
   },
   {
@@ -6906,11 +6980,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record graphName='beerGraphMostPopular'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.2. Which beer is the most popular when considering the number of users who reviewed it?\n",
+    "\n",
+    "# Step 0 - Clear graph\n",
+    "try:\n",
+    "    query = \"\"\"CALL gds.graph.drop('beerGraphMostPopular') YIELD graphName;\"\"\"\n",
+    "    result = execute_read(driver, query)\n",
+    "    pprint(result)\n",
+    "except Exception as e:\n",
+    "    pprint(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record nodeQuery=\"MATCH (n)\\n             WHERE head(labels(n)) = 'BEERS' OR head(labels(n)) = 'USER'\\n             RETURN id(n) AS id\" relationshipQuery='MATCH (b:BEERS)-[:REVIEWED]->(r:REVIEWS)-[:POSTED]->(u:USER)\\n             RETURN id(b) AS source, id(u) AS target' graphName='beerGraphMostPopular' nodeCount=482804 relationshipCount=2537991 projectMillis=554328>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1 - Create an appropriate graph\n",
+    "try:\n",
+    "    query = \"\"\"\n",
+    "        CALL gds.graph.project.cypher(\n",
+    "            'beerGraphMostPopular',\n",
+    "\n",
+    "            // Node projection: Include BEERS and USER nodes\n",
+    "            \"MATCH (n)\n",
+    "             WHERE head(labels(n)) = 'BEERS' OR head(labels(n)) = 'USER'\n",
+    "             RETURN id(n) AS id\",\n",
+    "\n",
+    "            // Relationships: BEERS to USERs who reviewed them\n",
+    "            \"MATCH (b:BEERS)-[:REVIEWED]->(r:REVIEWS)-[:POSTED]->(u:USER)\n",
+    "             RETURN id(b) AS source, id(u) AS target\"\n",
+    "        )\n",
+    "    \"\"\"\n",
+    "    result = execute_read(driver, query)\n",
+    "    pprint(result)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating graph: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5.2. Which beer is the most popular when considering the number of users who reviewed it?\n"
+    "# graphName='beerGraphMostPopular' nodeCount=482804 relationshipCount=2537991"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verification: Multiple reviews found in original data (expected, but graph should deduplicate):\n",
+      "[<Record beerId=41626 userName=None relationshipCount=2>,\n",
+      " <Record beerId=64228 userName=None relationshipCount=3>,\n",
+      " <Record beerId=55081 userName=None relationshipCount=4>,\n",
+      " <Record beerId=35754 userName=None relationshipCount=2>,\n",
+      " <Record beerId=33832 userName=None relationshipCount=2>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1.1 - Verify the graph has only 1 relationship between BEERS and USER\n",
+    "try:\n",
+    "    query = \"\"\"\n",
+    "        MATCH (b:BEERS)-[:REVIEWED]->(r:REVIEWS)-[:POSTED]->(u:USER)\n",
+    "        WITH b, u, count(r) AS reviewCount\n",
+    "        WHERE reviewCount > 1\n",
+    "        RETURN b.id AS beerId, u.name AS userName, reviewCount AS relationshipCount\n",
+    "        LIMIT 5\n",
+    "    \"\"\"\n",
+    "    result = execute_read(driver, query)\n",
+    "    if not result:\n",
+    "        print(\"Verification: Only 1 relationship exists between each BEERS and USER pair in the original data.\")\n",
+    "    else:\n",
+    "        print(\"Verification: Multiple reviews found in original data (expected, but graph should deduplicate):\")\n",
+    "        pprint(result)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error verifying graph: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most popular beer by number of users who reviewed it:\n",
+      "[<Record BeerName='Breakfast Stout' NumberOfReviews=4833.0>,\n",
+      " <Record BeerName='90 Minute IPA' NumberOfReviews=4394.0>,\n",
+      " <Record BeerName='Pliny The Elder' NumberOfReviews=4218.0>,\n",
+      " <Record BeerName='Two Hearted Ale' NumberOfReviews=4174.0>,\n",
+      " <Record BeerName='Heady Topper' NumberOfReviews=3974.0>,\n",
+      " <Record BeerName='Sculpin IPA' NumberOfReviews=3962.0>,\n",
+      " <Record BeerName='Hopslam Ale' NumberOfReviews=3844.0>,\n",
+      " <Record BeerName='KBS (Kentucky Breakfast Stout)' NumberOfReviews=3711.0>,\n",
+      " <Record BeerName='Bourbon County Brand Stout' NumberOfReviews=3615.0>,\n",
+      " <Record BeerName='Old Rasputin' NumberOfReviews=3531.0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2 - Run a centrality algorithm to find the most popular beer\n",
+    "# Source: https://neo4j.com/docs/graph-data-science/current/algorithms/degree-centrality/\n",
+    "try:\n",
+    "    query = \"\"\"\n",
+    "        CALL gds.degree.stream('beerGraphMostPopular')\n",
+    "        YIELD nodeId, score\n",
+    "        WITH gds.util.asNode(nodeId).name AS BeerName, score AS NumberOfReviews\n",
+    "        RETURN BeerName, NumberOfReviews\n",
+    "        ORDER BY NumberOfReviews DESC\n",
+    "        LIMIT 10\n",
+    "    \"\"\"\n",
+    "    result = execute_read(driver, query)\n",
+    "    print(\"Most popular beer by number of users who reviewed it:\")\n",
+    "    pprint(result)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error running centrality: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most popular beer by number of users who reviewed it:\n",
+      "[<Record BeerName='IPA' NumberOfUsers=6884>,\n",
+      " <Record BeerName='Breakfast Stout' NumberOfUsers=4930>,\n",
+      " <Record BeerName='Porter' NumberOfUsers=4737>,\n",
+      " <Record BeerName='90 Minute IPA' NumberOfUsers=4394>,\n",
+      " <Record BeerName='Imperial Stout' NumberOfUsers=4263>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to find the most popular beer by the number of users who reviewed it\n",
+    "query = \"\"\"\n",
+    "    MATCH (b:BEERS)-[:REVIEWED]->(r:REVIEWS)-[:POSTED]->(u:USER)\n",
+    "    RETURN b.name AS BeerName, count(DISTINCT u) AS NumberOfUsers\n",
+    "    ORDER BY NumberOfUsers DESC\n",
+    "    LIMIT 5\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "print(\"Most popular beer by number of users who reviewed it:\")\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "\n",
+    "## **🚨NÃO DEU IGUAL À QUERY SIMPLES ACIMA! 🚨**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -7004,11 +7266,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# graphName='beerReviewGraphMostInfluential' nodeCount=124_048 relationshipCount=893_394 projectMillis=75063"
+    "# graphName='beerReviewGraphMostInfluential' nodeCount=124_048 relationshipCount=893_394"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record source=9494459 target=9494220 weight=387>,\n",
+      " <Record source=9494470 target=9494220 weight=382>,\n",
+      " <Record source=9495389 target=9494220 weight=379>,\n",
+      " <Record source=9495292 target=9494220 weight=367>,\n",
+      " <Record source=9494633 target=9494220 weight=360>,\n",
+      " <Record source=9494459 target=9494241 weight=352>,\n",
+      " <Record source=9495151 target=9494220 weight=342>,\n",
+      " <Record source=9494459 target=9494237 weight=337>,\n",
+      " <Record source=9494682 target=9494220 weight=326>,\n",
+      " <Record source=9494767 target=9494220 weight=322>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to calculate user based on the number of distinct beers reviewed by style\n",
+    "query = \"\"\"\n",
+    "    MATCH (u:USER)<-[:POSTED]-(:REVIEWS)<-[:REVIEWED]-(b:BEERS)-[:HAS_STYLE]->(s:STYLE)\n",
+    "    WITH u, s, count(DISTINCT b) AS distinctBeers\n",
+    "    RETURN id(u) AS source, id(s) AS target, distinctBeers AS weight\n",
+    "    ORDER BY weight DESC\n",
+    "    LIMIT 10\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
    ]
   },
   {
@@ -7058,7 +7355,7 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "# **Não percebi o que é suposto fazer**\n",
+    "# **PERGUNTAR PROFª**\n",
     "\n",
     "</div>"
    ]
