--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -4752,7 +4752,11 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
-    "## **PERGUNTAR PROFª**"
+    "## **PERGUNTAR PROFª**\n",
+    "\n",
+    "- Ela disse que podemos fazer de forma a que ele faça match de tudo o que não está ligado e depois outro match para excluir os `USER` e depois `DELETE`.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
