Tudo Updated (já com os meus comments tmb)

--- a/Versões/Filipa_HW1_7.3.2025.ipynb
+++ b/Versões/Filipa_HW1_7.3.2025.ipynb
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:rgb(243, 247, 243); border-left: 10px solid rgb(17, 126, 46); padding: 10px; border-radius: 10px;\">\n",
+    "<div style=\"background-color:rgb(243, 247, 243); border: 0px; border-left: 10px solid rgb(17, 126, 46); padding: 10px; border-radius: 10px;\">\n",
     "<b>1.</b> Explore the database: get familiar with current schema, elements and other important database parameters.\n",
     "</div>"
    ]
