Tudo Updated (já com os meus comments tmb)

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -9243,8 +9243,8 @@
     "#### **Comments | Interpretation and Discrepancies**\n",
     "\n",
     "- The discrepancy between the results obtained with the Degree Centrality algorithm and the query without the **`WITH`** clause is due to the different calculations performed by each method.\n",
-    "\n",
-    "Possibly, the query without the **`WITH`** clause is counting the total number of reviews for each beer, while the **Degree Centrality algorithm** is calculating the number of unique users who reviewed each beer.\n",
+    "    \n",
+    "- Possibly, the query without the **`WITH`** clause is counting the total number of reviews for each beer, while the **Degree Centrality algorithm** is calculating the number of unique users who reviewed each beer.\n",
     "\n",
     "<br>\n",
     "\n",
