JH comments add + correção de um meu

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:45:57.447501Z",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:09.652569Z",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:10.939324Z",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:14.291655Z",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7852,6 +7852,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\" style=\"color: #272727; background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(31, 133, 194); padding: 10px; border-radius: 10px;\">\n",
+    "\n",
+    "#### **Assumptions**:\n",
+    "1. Considering the that the question asks for the two **`COUNTRIES`** that are the most similar in relation to their top five most produced beer **`STYLES`**, we decided to filter all **`COUNTRIES`** with fewer than 5 beer **`STYLES`**\n",
+    "2. This ensures that the similarity is only computed for **`COUNTRIES`** with a sufficiently diverse beer production.\n",
+    "3. This assumption will be analyzed in the section **'Problem Assumptions'** below\n",
+    "\n",
+    "#### **Query Organization** \n",
+    "This section refers to the steps taken to apply a similarity algorithm to solve the problem at hand\n",
+    "\n",
+    "1. **Clear Graph**: Drops the existing graph to ensure a clean slate for the new graph projection.\n",
+    "2. **Create Graph**: \n",
+    "    - Our graph projects **`COUNTRIES`** and **`STYLE`** nodes where each **`COUNTRIES`** node is connected to its top 5 most produced beer **`STYLE`** \n",
+    "    - **`COUNTRIES`** with less than five styles were excluded and the relationship between each COUNTRY and STYLE nodes was weighted by the number of beers produced in each style ensuring a more robust similarity comparison\n",
+    "    - Our graph projection results in a total of 723 relationships\n",
+    "\n",
+    "3. **Validation of successful graph projection**: Process to validate if relationships in our newly created graph were sucessfully created.\n",
+    "4. **Similarity Algorithm**: Runs node similarity algorithm on **`CountryBeerStyleSimilarityGraph`** to find the two most similar countries in regards to their top 5 most produced beers \n",
+    "5. All these steps are available in the section **'Node Similarity Algorithm'** below\n",
+    "\n",
+    "#### **Node Similarity Algorithm** (https://neo4j.com/docs/graph-data-science/current/algorithms/node-similarity/)\n",
+    "\n",
+    "- The Node Similarity algorithm compares a set of nodes based on the nodes they are connected to using one of different metrics: Jaccard metric, Overlap coefficient and the Cosine Similarity score. In our case we are using the default metric: the Jaccard Metric.\n",
+    "    - $J(A,B) = \\frac{|A \\cap B|}{|A \\cup B|} = \\frac{|A \\cap B|}{|A| + |B| - |A \\cap B|}$\n",
+    "\n",
+    "- In the context of our problem and to evaluate the similarity score between two contries, the algorithm will check the number of shared top 5 beer styles produced, weighting the similarity score based on the production volume of each style\n",
+    "\n",
+    "- This means that if two countries produce the same styles but in different proportions they will have a lower similarity score when compared to two countries that produce the same styles but in similar proportions\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Problem Assumptions**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
@@ -8077,6 +8120,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- After running this query, we noticed that **a lot of countries produce less than 5 styles of beer** (e.g Country PY only produce the German Pilsner style) and for that reason decided to investigate which countries produce less than 5 styles of beer and the total percentage below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
@@ -8179,7 +8229,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note** It mentions a total of $199$ countries instead of $200$ because we are removing the ghost country without a name"
+    "- As we can see from the results above, around $27\\%$ of **`COUNTRIES` produce less than 5 beer styles**. \n",
+    "\n",
+    "> All these **`COUNTRIES`** will not be considered when determining the top two similar countries in regards to their top 5 beer styles produced."
    ]
   },
   {
@@ -8411,42 +8463,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "\n",
-    "#### **COMENTÁRIO JOÃO**\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\" style=\"color: #272727; background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(31, 133, 194); padding: 10px; border-radius: 10px;\">\n",
-    "\n",
-    "\n",
-    "##### **Applying Node Similarity Algorithm**\n",
-    "\n",
-    "\n",
-    "1. Filters out countries with fewer than 5 beer styles\n",
-    "\n",
-    "- Only includes countries with at least 5 distinct beer styles in the graph and have c.name different from NULL\n",
-    "- This ensures that similarity is only computed for countries with a sufficiently diverse beer production.\n",
-    "\n",
-    "2. Creates a weighted graph between countries and beer styles\n",
-    "\n",
-    "- Each country node (COUNTRIES) is connected to its top 5 most produced beer styles (STYLE).\n",
-    "- The relationship weight is the number of beers in that country belonging to each style.\n",
-    "3. Runs the Node Similarity algorithm using these weighted connections\n",
-    "\n",
-    "- Instead of just checking if two countries share beer styles, the algorithm considers how much beer is produced in each style.\n",
-    "- If two countries produce the same styles but in very different proportions, they will have lower similarity.\n",
-    "- If two countries produce the same styles in similar proportions, they will have higher similarity.\n",
-    "\n",
-    "> **ALTERAR COMMENT**\n",
-    "\n",
-    "</div>"
+    "##### **Node Similarity Algorithm**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8461,7 +8483,7 @@
     "# 5.1. Which two countries are most similiar when it comes to their top five most produced Beer styles?\n",
     "# Step 0 - Clear graph\n",
     "try:\n",
-    "    query = \"\"\"CALL gds.graph.drop('beerGraphMostSimilar') YIELD graphName;\"\"\"\n",
+    "    query = \"\"\"CALL gds.graph.drop('CountryBeerStyleSimilarityGraph') YIELD graphName;\"\"\"\n",
     "    result = execute_read(driver, query)\n",
     "    pprint(result)\n",
     "except Exception as e:\n",
@@ -8486,7 +8508,7 @@
     "try:\n",
     "    query = \"\"\"\n",
     "        CALL gds.graph.project.cypher(\n",
-    "            'beerGraphMostSimilar',\n",
+    "            'CountryBeerStyleSimilarityGraph',\n",
     "\n",
     "            // Node projection: Include COUNTRIES and STYLE nodes (200 + 113 = 313 nodes)\n",
     "            \"MATCH (n)\n",
@@ -8508,7 +8530,7 @@
     "except Exception as e:\n",
     "    print(f\"Error projecting graph: {e}\")\n",
     "\n",
-    "## #  graphName='beerGraphMostSimilar' nodeCount=313 relationshipCount=723"
+    "## #  graphName='CountryBeerStyleSimilarityGraph' nodeCount=313 relationshipCount=723"
    ]
   },
   {
@@ -8553,8 +8575,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The output above shows **`source`**, **`target`**, and **`weight`**, meaning that **countries** (source) are correctly connected to **styles** (target) with an appropriate weight (**beer count**).\n",
+    "\n",
+    "- From the query above we can see that our validation process was successful. \n",
+    "  - From these ten distinct relationships, we can see that each of the two countries (sources) that appear are connected to 5 distinct styles (targets) with different weights (beer count), indicating a successful projection of the graph."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8571,7 +8603,7 @@
     "# Step 2 - Run the Node Similarity Algorithm\n",
     "try:\n",
     "    query = \"\"\"\n",
-    "        CALL gds.nodeSimilarity.stream('beerGraphMostSimilar', {relationshipWeightProperty: 'weight'})\n",
+    "        CALL gds.nodeSimilarity.stream('CountryBeerStyleSimilarityGraph', {relationshipWeightProperty: 'weight'})\n",
     "        YIELD node1, node2, similarity\n",
     "        WITH gds.util.asNode(node1).name AS Country1,\n",
     "             gds.util.asNode(node2).name AS Country2, similarity\n",
@@ -8615,11 +8647,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Comments**\n",
+    "##### **Results**\n",
     "\n",
-    "- The similarity between countries based on their top five most produced beer styles can be calculated using the Jaccard Similarity Coefficient. This coefficient measures the similarity between two sets by dividing the size of the intersection by the size of the union of the two sets.\n",
-    "\n",
-    "**Results**\n",
+    "> Based on the results obtained above, we can conclude that **the two most similar countries when it comes to their top five most produced beer styles are**: ***ET*** and **CU** with a similarity score of $1$.\n",
     "\n"
    ]
   },
@@ -8646,11 +8676,16 @@
     "4. **Check Multiple Reviews**: Identifies users with multiple reviews for the same beer to validate if duplicates exist in the original data.\n",
     "5. **Centrality Algorithm**: Runs degree centrality on **`beerGraphMostPopular`** to find popular beers based on the number of users who reviewed them.\n",
     "\n",
-    "#### **Degree Centrality Algorithm**\n",
+    "#### **Degree Centrality**\n",
     "\n",
     "- **Degree Centrality** is a measure of the number of incoming relationships to a node. In this context, it calculates the number of users who have reviewed each beer, providing insights into the popularity of beers based on the number of reviews.\n",
     "\n",
-    "$$\\text{Degree Centrality} = \\frac{\\text{Number of Users who Reviewed the Beer}}{\\text{Total Number of Users}}$$\n",
+    "$$d_i = k_i $$\n",
+    "\n",
+    "Where:\n",
+    "  - $d_i$ is the degree centrality of node $i$ (beer)\n",
+    "  - $k_i$ is the number of incoming relationships to node $i$ (users who reviewed the beer)\n",
+    "\n",
     "\n",
     "</div>"
    ]
