Add JH + Filipa comments

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:45:57.447501Z",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:09.652569Z",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:10.939324Z",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-29T21:46:14.291655Z",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6603,6 +6603,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### **Additional considerations regarding data base structure changes**\n",
+    "\n",
+    "**1. Possibility of converting labels to properties** \n",
+    "\n",
+    "- During the analysis of the database structure, we noted some labels that could potentially be reduced to a property in another label. In particularly, transforming the label **`STYLE`** into a **`BEER`** property.\n",
+    "- As each **`BEER`** only has a single **`STYLE`** and there are no orphaned STYLE nodes, applying this change would provide a few advantages like the simplification of the database, allow for faster querying and reduce redundancy. Additionally, it would allow us to take full advantage of the flexibility provided by the NEO4J graph database.\n",
+    "- However, after considering the cons associated with this transformation, we decided against it. The main reason being that this change would pose a challenge to the application of graph algorithms as many of these require explicit node relationships for the graph projection. \n",
+    "- Hence implementing this type of changes could make it harder to run the graph algorithms required to answer the questions posed by the business in the component 5 of the assignment. \n",
+    "\n",
+    "**2. Possibility of converting properties to labels**\n",
+    "- We also considered the possibility of converting some properties into labels. For example, the **state** property of the **`BEER`** label could be converted into a label.\n",
+    "- However, this change would not be beneficial for the business as it would not provide any advantages in terms of query performance or graph algorithms considering the questions asked by the business in the components 5 or 3 of the assignment.\n",
+    "- Hence implementing these changes would increase graph complexity while potentially leading to redundant relationships."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### **Dealing with the `STATE` property**"
    ]
   },
@@ -6764,11 +6790,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We considered the possibility of not only removing the **`state`** property</b> from **`BEERS`** but also removing it from **`BREWERIES`**, placing it as a property of the **`IN`** relationship that connects **`CITIES`** to **`COUNTRIES`**. \n",
     "\n",
-    "#### **COMENTÁRIO FILIPA**\n",
+    " - However, this alternative was not viable as it would result in a loss of information, since there are cities with the same name that belong to different countries, as can be seen in the example below. \n",
     "\n",
-    "</div>"
+    "  - Therefore, when trying to find the location of a **`BREWERY`**/**`BEER`**, it would not be possible to determine which of these two cases it would refer to.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Running the following query:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record City='Brakel' countries=['BE', 'DE']>,\n",
+      " <Record City='Linden' countries=['BE', 'US']>,\n",
+      " <Record City=None countries=['BE', 'US', 'AU', 'IT', 'FR', 'ES', 'RU', 'CZ', 'NZ', 'BR', 'UA', 'IE', 'KY', 'SG', 'LT', 'CR', 'ET', 'CU']>,\n",
+      " <Record City='Nieuwpoort' countries=['BE', 'NL']>,\n",
+      " <Record City='Essen' countries=['BE', 'DE']>,\n",
+      " <Record City='Charleroi' countries=['BE', 'US']>,\n",
+      " <Record City='Halle' countries=['BE', 'DE']>,\n",
+      " <Record City='Beloeil' countries=['BE', 'CA']>,\n",
+      " <Record City='Nazareth' countries=['BE', 'US']>,\n",
+      " <Record City='Waterloo' countries=['BE', 'US', 'CA']>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to find cities with the same name but in different countries\n",
+    "query = \"\"\"\n",
+    "    MATCH (c:CITIES)-[:IN]->(co:COUNTRIES) \n",
+    "    WITH c, collect(co.name) AS countries \n",
+    "    WHERE size(countries) > 1 \n",
+    "    RETURN c.name AS City, countries \n",
+    "    LIMIT 10\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get the following result:\n",
+    "\n",
+    "```\n",
+    "\"Waterloo\" → [\"BE\", \"US\", \"CA\"]\n",
+    "```\t\n",
+    "\n",
+    "These cities are distinct: one is in **Belgium**, another in the **USA**, and another in **Canada**, all sharing the same name.<br>\n",
+    "\n",
+    "And also:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record BeerName='Blueberry Wheat' BeerState='IL'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to find BEERS name and state brewed in Waterloo, US\n",
+    "query = \"\"\"\n",
+    "    MATCH (c:CITIES)-[:IN]->(co:COUNTRIES)\n",
+    "    WHERE c.name = \"Waterloo\" AND co.name = \"US\"\n",
+    "    MATCH (br:BREWERIES)-[:IN]->(c)\n",
+    "    MATCH (br)-[:BREWED]->(b:BEERS)\n",
+    "    RETURN b.name AS BeerName, b.state AS BeerState\n",
+    "    SKIP 250 LIMIT 1\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get this result:\n",
+    "\n",
+    "```\n",
+    "[<Record BeerName='Blueberry Wheat' BeerState='IL'>]\n",
+    "```\n",
+    "\n",
+    "And for the following query:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Record BeerName='Pumpkin Ale' BeerState='ON'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to find the first beer brewed in Waterloo, CA\n",
+    "query = \"\"\"\n",
+    "    MATCH (c:CITIES)-[:IN]->(co:COUNTRIES)\n",
+    "    WHERE c.name = \"Waterloo\" AND co.name = \"CA\"\n",
+    "    MATCH (br:BREWERIES)-[:IN]->(c)\n",
+    "    MATCH (br)-[:BREWED]->(b:BEERS)\n",
+    "    RETURN b.name AS BeerName, b.state AS BeerState\n",
+    "    LIMIT 1\n",
+    "\"\"\"\n",
+    "result = execute_read(driver, query)\n",
+    "pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get the result:\n",
+    "\n",
+    "```\n",
+    "[<Record BeerName='Pumpkin Ale' BeerState='ON'>]\n",
+    "```\n",
+    "\n",
+    "> If the schema were altered as mentioned above, it would not be possible to determine whether the ***Pumpkin Ale*** mentioned here referred to, for example, the **`BEER`** from ***Ontario, Canada*** or ***Illinois, USA***.</p>"
    ]
   },
   {
